<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arc_en_ciel.ChoixArc">
    <TableRow>
        <CheckBox
            android:id="@+id/r"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rouge"
            />
    </TableRow>
    <TableRow>
        <CheckBox
            android:id="@+id/o"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/orange"
            />
    </TableRow>
    <TableRow>
        <CheckBox
            android:id="@+id/j"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/jaune"
            />
    </TableRow>
    <TableRow>
        <CheckBox
            android:id="@+id/v"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/vert"
            />
        <Button
            android:id="@+id/ok"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="OK"
            />
    </TableRow>
    <TableRow>
        <CheckBox
            android:id="@+id/b"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/bleu"
            />
    </TableRow>
    <TableRow>
        <CheckBox
            android:id="@+id/i"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/indigo"
            />
    </TableRow>
    <TableRow>
        <CheckBox
            android:id="@+id/vi"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/violet"
            />
    </TableRow>
</TableLayout>